Adjust slanted on mobile version - Fix Header's z-index bug - Adjust logo width

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -18,12 +18,20 @@
   position: absolute;
   left: 0;
   right: 0;
-  height: 150px;
-  top: -105px;
+  background: inherit;
+  height: 100px;
+  top: -40px;
   /* background: #06dbd0;
   clip-path: polygon(0 0, 100% 70%, 100% 75%, 0 5%); */
-  background: inherit;
-  clip-path: polygon(0 0, 100% 70%, 100% 100%, 0 100%);
+  clip-path: polygon(0 0, 100% 40%, 100% 100%, 0 100%);
+}
+
+@media (min-width: 768px) {
+  .slanted::before {
+    height: 150px;
+    top: -105px;
+    clip-path: polygon(0 0, 100% 70%, 100% 100%, 0 100%);
+  }
 }
 
 .slanted::after {
@@ -31,8 +39,16 @@
   position: absolute;
   left: 0;
   right: 0;
-  height: 150px;
-  bottom: -105px;
   background: inherit;
-  clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 30%);
+  height: 100px;
+  bottom: -40px;
+  clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 60%);
+}
+
+@media (min-width: 768px) {
+  .slanted::after {
+    height: 150px;
+    bottom: -105px;
+    clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 30%);
+  }
 }
